75% prevents overlap of the icon and the text

--- a/kifi-backend/modules/shoebox/angular/src/profile/profileWidget.styl
+++ b/kifi-backend/modules/shoebox/angular/src/profile/profileWidget.styl
@@ -216,7 +216,7 @@
 
   .kf-pw-create-org-label
     display: inline-block
-    max-width: 80%
+    max-width: 75%
     font-size: 20px
     margin-left: -15px
 
